# bystro

./: Elasticsearch.yml
config/: hg19.clean.yml
lib/: Interface.pm  Seq.pm
lib/Seq/: Definition.pm
python/python/bystro/reducedrank/: _base.py  reduced_rank_tada.py
python/python/bystro/reducedrank/tests/: test_reduced_rank_tada.py
vcf2/: Cargo.toml
vcf2/src/: main.rs
