[package]
name = "bystro-vcf"
version = "0.1.0"
authors = ["Alex Kotlar <akotlar@bu.edu>"]
edition = "2018"

[dependencies]
log = "0.4.8"
crossbeam-channel = "0.3.9"
crossbeam-utils = "0.6.6"
num_cpus = "1.10.0"
atoi = "0.3.1"
itoa = "0.4.4"
memchr = "2.2.1"
ryu = "1.0.0"
lz4 = "1.23.1"
regex = "1.3.1"

